# yolo_mf

./: .readthedocs.yaml  .safety-project.ini  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/yolo_mf/: __init__.py  cli.py
tests/: __init__.py  test_yolo_mf.py
