[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_mf"
version = "0.1.0"
description = "Optimize YOLO for microfluidics scenario."
readme = "README.rst"
authors = [
  {name = "CHEN, Yu-Jhen", email = "joonie.jhen@gmail.com"}
]
maintainers = [
  {name = "CHEN, Yu-Jhen", email = "joonie.jhen@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/cyj0918/yolo_mf/issues"
changelog = "https://github.com/cyj0918/yolo_mf/blob/master/changelog.md"
homepage = "https://github.com/cyj0918/yolo_mf"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

